# cppcourse-brunel

./: CMakeLists.txt  Neuron.hpp  README.md  READMEPLEASE.md
W3Project/: CMakeLists.txt  CMakeLists.txt~  Network.cpp  Network.hpp  Neuron  Neuron.cpp  Neuron.hpp  Neuron.hpp.gch  NeuronMain.cpp  UNITTEST.cpp
W3Project/googletest/: CTestTestfile.cmake  Makefile
